# CommunityEventsPlatform

./: README.md  pyproject.toml  requirements.txt  settings.py  urls.py
apis/auth/: view.py
apis/events/: filters.py  permissions.py  serializers.py  views.py
apis/users/: serializers.py  urls.py  views.py
commons/: expection_handling.py
core/: apps.py  expection_handling.py  pagination.py
core/cache/: cacheMixin.py  decorators.py  invalidations.py  utils.py  versions.py
events/: models.py  signals.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_options_event_capacity_and_more.py
frontend/: urls.py  views.py
frontend/templates/frontend/: base.html  event_create.html  event_list.html  login.html  profile.html
static/css/: app.css
static/js/: api.js  auth.js  events.js  toast.js
users/: admin.py  models.py  signals.py
users/migrations/: 0001_initial.py
